# apple2emu

./: .gitignore  Cargo.toml  DEVEL_LOCAL.md  DISK_II_SPEC.md  DevLog.md  FIXME.md  GEMINI.md  History_To_Success.md  README.md  SETUP.md  TODO.md  last_trace.txt  run_log_trace.txt
apple2-core/: Cargo.toml
apple2-core/src/: cpu.rs  cpu_test.rs  disk2.rs  disk2_test.rs  instructions.rs  lib.rs  machine.rs  memory.rs  memory_test.rs  nibble.rs  nibble_test.rs  video.rs
apple2-desktop/: Cargo.toml  preview.txt  preview_all.txt  rom_dump.txt
apple2-desktop/src/: config.rs  main.rs
