[package]
name = "apple2-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
minifb = "0.27"
apple2-core = { path = "../apple2-core" }
arboard = "3.4.0"
rodio = "0.19.0"
rfd = "0.14"
flate2 = "1.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
